<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Social Library</string>
    <string name="not_internet">No Internet Connection</string>
    <string name="cancel">Cancel</string>
    <string name="tweet">Tweet</string>
    <string name="add_account_button">Add new account</string>
    <string name="you_loggined_on_this_account">You loggined on this account</string>
    <string name="tweets">Tweets</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="send_tweet">Send Tweet</string>
    <string name="show_all_tweets">Show all tweets</string>
    <string name="favorite">Favorite</string>
    <string name="simular_to">Similar to</string>
    <string name="change_profile">Change profile</string>
    <string name="change_avatar">Change profile avatar</string>
    <string name="name_lowerCase">Name</string>
    <string name="name_upperCase">NAME:</string>
    <string name="description_lowerCase">Description</string>
    <string name="description_upperCase">DESCRIPTION:</string>
    <string name="url_lowerCase">Url</string>
    <string name="url_upperCase">URL:</string>
    <string name="location_lowerCase">Location</string>
    <string name="location_upperCase">LOCATION:</string>
    <string name="save">Save</string>
    <string name="not_correct_data">May be not correct data setup on your phone</string>
    <string name="insert_sd_card">Insert SD Card</string>
    <string name="twitter_search">Enter a #hashtag or keyword</string>
    <string name="twitter">Twitter</string>
    <string name="facebook">Facebook</string>
    <string name="choise_social_network">Choise social network</string>
    <string name="home">Home</string>
    <string name="star">Favorite</string>
    <string name="message">Messages</string>
    <string name="search">Search</string>
    <string name="add_tweet">Add a tweet</string>
    <string name="select_photo">Select photo</string>
    <string name="avatar">Avatar</string>
    <string name="follow_me">Follow me</string>
    <string name="loading">Loading&#8230; Please wait</string>

    <string-array name="titles">
        <item>TIMELINE</item>
        <item>CONNECT</item>
        <item>PROFILE</item>
    </string-array>
    <string-array name="search_titles">
        <item>TWEETS</item>
        <item>PEOPLE</item>
    </string-array>
    <string-array name="select_photo_variants">
        <item>Camera</item>
        <item>Gallery</item>
        <item>Remove photo</item>
    </string-array>

</resources>