<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/bg_gradient_small" >

        <LinearLayout
            android:id="@+id/changeProfile_mainLayout"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical"
            android:visibility="invisible" >

            <View
                android:layout_width="wrap_content"
                android:layout_height="10dip" />

            <include
                android:id="@+id/changeProfile_userItem"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                layout="@layout/profile_info_user_item" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <TextView
                    style="@style/ItemUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/name_upperCase" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/band" />

                <EditText
                    android:id="@+id/changeProfile_name"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/name_lowerCase" />

                <TextView
                    style="@style/ItemUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/description_upperCase" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/band" />

                <EditText
                    android:id="@+id/changeProfile_description"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/description_lowerCase" />

                <TextView
                    style="@style/ItemUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:text="@string/url_upperCase" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/band" />

                <EditText
                    android:id="@+id/changeProfile_url"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/url_lowerCase" />

                <TextView
                    style="@style/ItemUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/location_upperCase" />

                <ImageView
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="2dp"
                    android:background="@color/band" />

                <EditText
                    android:id="@+id/changeProfile_location"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:hint="@string/location_lowerCase" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/changeProfile_cancelButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/cancel" />

                <Button
                    android:id="@+id/changeProfile_saveButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/save" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_centerInParent="true"
        layout="@layout/progress" />

</RelativeLayout>